--- a/client/src/components/CardRulings/CardRulings.scss
+++ b/client/src/components/CardRulings/CardRulings.scss
@@ -31,6 +31,7 @@
     &-comment {
         flex: 1;
         font-size: 1.3rem;
+        word-break: break-word;
 
         & > .CardSymbol {
             width: 1.4rem;
